fix for coordinated decimals jumpoing

--- a/transformap.css
+++ b/transformap.css
@@ -289,6 +289,6 @@ License: MIT, see MIT-LICENCE-Leaflet.MousePosition.txt */
   padding: 0 5px;
   margin:0;
   color: #333;
-  font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font: 10px/1.5 monospace;
 }
 
